--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 function startApp(){
 	// initialize Septica
-	var game = new Septica();
+	var game = new Septica("stage");
 	game.start();
 }
 
