restructure preload.js as septica-preload.js
Restructured preloader. Will now send the stage as parameter and
preloader will handle rendering loading progress.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="scripts/plugins/jquery-2.1.1.js"></script>
 <script type="text/javascript" src="scripts/plugins/createjs-2013.12.12.min.js"></script>
 <script type="text/javascript" src="scripts/septica.js"></script>
-<script type="text/javascript" src="scripts/preload.js"></script>
+<script type="text/javascript" src="scripts/septica-preload.js"></script>
 
 <script>
 
