--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ window.onload = startApp;
 </head>
 
 <body>
-
+<div id="hello"> hello there ! </div>
 <canvas id="stage" width="500" height="500">
 </canvas>
 
