--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ window.onload = startApp;
 </head>
 
 <body>
-<div id="hello"> hello there ! </div>
+<div id="hello" style="display:none"> hello there ! </div>
 <canvas id="stage" width="500" height="500">
 </canvas>
 
