isolate temporary stuff in septica-fiddling.js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="scripts/plugins/createjs-2013.12.12.min.js"></script>
 <script type="text/javascript" src="scripts/septica.js"></script>
 <script type="text/javascript" src="scripts/septica-preload.js"></script>
+<script type="text/javascript" src="scripts/septica-fiddling.js"></script>
 
 <script>
 
