--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ function startApp(){
 	ctx.webkitImageSmoothingEnabled = false;
 
 	// initialize Septica
-	var game = new Septica("stage");
+	var game = new Septica("stage", "test-mode", ["1","2","3","4"], ["1"], 0);
 	game.start();
 }
 
